# SubgamePruning

./: .gitignore  Cargo.toml  README.md  hello_world.py  run_all.ps1  run_bridge.ps1  run_leduc.ps1  run_leduc5.ps1  run_liar_dice.ps1  run_ttt.ps1  worker.ps1
cfr/: Cargo.toml
cfr/src/: config.rs  main.rs
cfr/src/cfr/: agents.rs  cfr_iteration_v2.rs  cfr_util.rs  mod.rs  regret_matching.rs  regret_matching_plus.rs  subgame_prune_v2.rs
csv_tool/: Cargo.toml
csv_tool/src/: main.rs  tool.rs
game_tree/: Cargo.toml
game_tree/src/: lib.rs  load_json.rs  main.rs
game_tree/src/tree/: tree_struct.rs
game_tree/tree_json/kuhn_poker/: trees_kuhn_poker.txt
game_tree/tree_json/leduc_poker/: trees_leduc_poker.txt
game_tree/tree_json/liars_dice/: trees_liars_dice.txt
game_tree/tree_json/my_leduc5/: trees_my_leduc5.txt
game_tree/tree_json/tiny_bridge_2p/: trees_tiny_bridge_2p.txt
game_tree/tree_json/tiny_hanabi/: trees_tiny_hanabi.txt
plot/: Cargo.toml
plot/src/: lib.rs  main.rs  plot.rs
src/: br.rs  cfr.rs  dfs.rs  load_tree.rs  logger.rs  main.rs  subgame_prune_check_free_only.rs  subgame_prune_check_free_only_c.rs  subgame_prune_general.rs  subgame_prune_general_c.rs  timer.rs
